--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 ktor_version=2.0.3
 kotlin_version=1.7.10
 logback_version=1.2.11
+kotest_version=5.3.2
+kotest_ktor_version=1.0.3
+mockk_version=1.12.4
 resilience4j_version=1.7.1
 kotlin.code.style=official
